add question related && 500 views && download route attachment route

--- a/package.json
+++ b/package.json
@@ -4,14 +4,28 @@
   "description": "Teller Web App",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "watch": "watchify client/main.js -o public/scripts/bundle.js -v",
+    "start": "npm run watch & nodemon index.js"
   },
   "author": "Juan La Jara, Hiperderecho",
   "license": "ISC",
   "dependencies": {
+    "atob": "^1.1.2",
+    "babel-polyfill": "^6.2.0",
+    "btoa": "^1.1.2",
     "compression": "^1.6.0",
     "express": "^4.13.3",
     "express-minify": "^0.1.6",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "moment": "^2.10.6",
+    "request-promise": "^1.0.2",
+    "speakingurl": "^7.0.0",
+    "virtual-dom": "^2.1.1"
+  },
+  "devDependencies": {
+    "babelify": "^7.2.0",
+    "nodemon": "^1.8.1",
+    "watchify": "^3.6.1"
   }
 }
