--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-minify": "^0.1.6",
     "file-size": "^1.0.0",
     "jade": "^1.11.0",
+    "jstransformer-markdown-it": "^0.2.3",
     "moment": "^2.10.6",
     "moment-timezone": "^0.4.1",
     "request-promise": "^1.0.2",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "babelify": "^7.2.0",
+    "markdown-js": "0.0.3",
     "nodemon": "^1.8.1",
     "watchify": "^3.6.1"
   }
